--- a/css/style.css
+++ b/css/style.css
@@ -10,24 +10,14 @@
 body{
   background-color: #EDEFEC;
   font-family: 'Nunito', sans-serif;
+  text-align:center;
+  margin:10px auto;
 }
-
-h1 {
-  color: salmon;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-#firstsection, #scdsection {
-  margin:auto;
-  width: 55%
-}
-
 
 .firstintro, .scdintro{
   color: #585C5F;
   text-align:center;
+  margin:10px auto;
 }
 
 .firstintro p, .scdintro p {
@@ -36,16 +26,21 @@ h1 {
 
 .firstphotos, .scdphotos {
   display: flex;
-  justify-content: space-between;
-  margin: 20px 0;
+  justify-content: space-around;
+  margin: 10px auto;
+  max-width: 600px;
+  padding: 0 0 0 -10px;
+}
+
+.SF, .NY, .LDN, .NAPA, .SFii, .SNM {
+  position: relative;
 }
 
 .SF-image, .NY-image, .LDN-image, .NAPA-image, .SFii-image, .SNM-image {
-  position: relative;
-  width: 210px;
+  width: 180px;
   height: 230px;
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto;
 }
 
 .SF-image img, .NY-image img, .LDN-image img, .NAPA-image img, .SFii-image img, .SNM-image img {
@@ -55,22 +50,41 @@ h1 {
 }
 
 .SF-caption, .NY-caption, .LDN-caption, .NAPA-caption, .SFii-caption, .SNM-caption {
-  /*position: absolute;
+  position: absolute;
   line-height:30px;
-  top: 240px;
-  width: 100%;*/
+  top: 120px;
+  width: 100%;
   color:white;
   font-size: 20px;
   text-align:center;
 }
 
 .buttonOne, .buttonTwo {
+  display: block;
   font-family: 'Nunito', sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   color: #585C5F;
-  padding: 40px 40px;
-  margin: 40px 10px;
+  padding: 8px 8px;
+  margin: 40px auto;
   text-decoration: none;
-  width: 210px;
+  width: 180px;
   text-align:center;
+}
+
+@media (max-width: 375px) {
+  .firstphotos, .scdphotos {
+    flex-wrap: wrap;
+    width: 100%;
+    }
+
+    .SF-image, .NY-image, .LDN-image, .NAPA-image, .SFii-image, .SNM-image {
+      width: 180px;
+    }
+}
+
+@media (max-width: 610px) {
+  .firstphotos, .scdphotos {
+    flex-wrap: wrap;
+    width: 100%;
+    }
 }
